# LX-MIE

./: .gitignore  CMakeLists.txt  make.global_options  make.global_options_debug  makefile  pyproject.toml  readme.md
.github/workflows/: build_and_publish.yml
compilation/: readme.txt
examples/: example_efficiencies.py  example_legendre.py  example_phase_function.py
input/: parameters.input  parameters_legendre_series.input  parameters_phase_function.input
main/: CMakeLists.txt  main.cpp  main_auxiliary.h  makefile  write_output.cpp
mie/: CMakeLists.txt  makefile  mie.cpp  mie.h
src/main/: CMakeLists.txt  main.cpp  main_auxiliary.h  read_files.cpp  write_output.cpp
src/mie/: CMakeLists.txt  mie.cpp  mie.h
src/python/: CMakeLists.txt  lxmie_bindings.cpp
