[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "lxmie"
version = "1.0.0"
description = "LX-MIE: Mie scattering for arbitrarily large size parameters"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.build-type = "Release"
