[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "lxmie"
version = "1.1.0"
description = "LX-MIE: Mie scattering for arbitrarily large size parameters"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.build-type = "Release"

# ---------------------------------------------------------------------------
# cibuildwheel — wheel build configuration
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
# Build for CPython 3.9 – 3.13 on all platforms.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# macOS: install libomp from Homebrew and pass the required CMake flags so
# that FindOpenMP succeeds with Apple Clang.
# The semicolon-separated OpenMP_CXX_FLAGS value is a CMake list — each token
# becomes a separate compiler flag.
[tool.cibuildwheel.macos]
before-build = "brew install libomp || true"

[tool.cibuildwheel.macos.environment]
CMAKE_ARGS = "-DOpenMP_CXX_FLAGS=-Xpreprocessor;-fopenmp;-I$(brew --prefix libomp)/include -DOpenMP_CXX_LIB_NAMES=omp -DOpenMP_omp_LIBRARY=$(brew --prefix libomp)/lib/libomp.a"
